--- a/module5/casestudy/angular-casestudy-module5/src/app/facility-create/facility-create.component.html
+++ b/module5/casestudy/angular-casestudy-module5/src/app/facility-create/facility-create.component.html
@@ -4,7 +4,7 @@
       <div class="row w-50 mx-auto">
         <div class="row">
           <h2>Create facility</h2>
-          <form action="@{/customer/edit}" object="${customer}" method="post">
+          <form action="@{/resort/save}" object="${facilityDto}" method="post">
             <div class="form-outline mb-4">
               <input field="*{id}" class="form-control" type="hidden"/>
             </div>
@@ -12,35 +12,35 @@
 
               <div class="col-6">
                 <div class="form-outline mb-4">
-                  <label class="form-label">Name Customer</label>
-                  <input field="*{nameCustomer}" class="form-control"/>
+                  <label class="form-label">Name Facility</label>
+                  <input field="*{nameFacility}" class="form-control"/>
                 </div>
 
                 <div class="form-outline mb-4">
-                  <label class="form-label">Date Of Birth</label>
-                  <input type="date" field="*{dateOfBirth}" class="form-control"/>
+                  <label class="form-label">Area Facility</label>
+                  <input field="*{areaFacility}" class="form-control"/>
                 </div>
 
                 <div class="form-outline mb-4">
-                  <label class="form-label">Gender</label>
+                  <label class="form-label">Cost Facility</label>
+                  <input field="*{costFacility}" class="form-control"/>
+                </div>
 
-                  <select class="form-select" aria-label="Default select example"
-                          field="*{gender}">
-                    <option value="1">
-                      nam
-                    </option>
-                    <option value="0">
-                      nữ
+                <div class="form-outline mb-4">
+                  <label class="form-label">Max People</label>
+                  <input field="*{maxPeople}" class="form-control"/>
+                </div>
+
+                <div class="form-outline mb-4">
+                  <label class="form-label">Name Rent Type</label>
+                  <select field="*{rentType}" class="form-select"
+                          aria-label="Default select example">
+                    <option each="renType: ${rentTypeList}"
+                            value="${renType.id}"
+                            text="${renType.nameRentType}"
+                    >
                     </option>
                   </select>
-
-                </div>
-
-                <div class="form-outline mb-4">
-                  <label class="form-label">id Card</label>
-                  <input field="*{idCard}" class="form-control"/>
-
-
                 </div>
 
 
@@ -49,36 +49,54 @@
               <!---------------------------->
 
               <div class="col-6">
-                <div class="form-outline mb-4">
-                  <label class="form-label">Phone Number</label>
-                  <input field="*{phoneNumber}" class="form-control"/>
-                </div>
+                <!--                                tạo sự kiện onchange getForm để tạo fusition-->
 
                 <div class="form-outline mb-4">
-                  <label class="form-label">Email</label>
-                  <input field="*{email}" class="form-control"/>
-                </div>
+                  <label class="form-label">Name Facility Type</label>
+                  <select field="*{facilityType}" id="selectType" class="form-select"
+                          aria-label="Default select example" onchange="getForm()">
 
-                <div class="form-outline mb-4">
-                  <label class="form-label">Address</label>
-                  <input field="*{address}" class="form-control"/>
-                </div>
-
-                <div class="form-outline mb-4">
-                  <label class="form-label">Name Customer Type</label>
-                  <select field="*{customerType}" class="form-select"
-                          aria-label="Default select example">
-                    <option each="customerType:${customerTypeList}"
-                            text="${customerType.nameCustomerType}"
-                            value="${customerType.id}">
-
+                    <option each="facilityType: ${facilityTypeList}"
+                            value="${facilityType.id}"
+                            text="${facilityType.nameFacilityType}">
                     </option>
                   </select>
                 </div>
+                <div id="room-facility">
+
+                  <div class="form-outline mb-4">
+                    <label class="form-label">Facility Free</label>
+                    <input field="*{facilityFree}" class="form-control"/>
+                  </div>
+
+                </div>
+
+                <div id="villa-facility" style="display: none">
+                  <div class="form-outline mb-4">
+                    <label class="form-label">Pool Area</label>
+                    <input field="*{poolArea}" class="form-control"/>
+                  </div>
+                </div>
+
+                <div id="house-facility" style="display: none">
+                  <div class="form-outline mb-4">
+                    <label class="form-label">Standard Room</label>
+                    <input field="*{standardRoom}" class="form-control"/>
+                  </div>
+                  <div class="form-outline mb-4">
+                    <label class="form-label">Description Other Convenience</label>
+                    <input field="*{descriptionOtherConvenience}" class="form-control"/>
+                  </div>
+                  <div class="form-outline mb-4">
+                    <label class="form-label">Number Of Floors</label>
+                    <input field="*{numberOfFloors}" class="form-control"/>
+                  </div>
+
+                </div>
+
 
               </div>
             </div>
-
             <button type="submit" class="btn btn-primary btn-block bg-momo">
               save
             </button>
@@ -88,8 +106,6 @@
                 Back To List
               </button>
             </a>
-
-
           </form>
 
         </div>
@@ -97,3 +113,104 @@
     </div>
   </div>
 </div>
+
+
+<!--<div id="body" class="card text-center">-->
+<!--  <div id="menu">-->
+<!--    <div class="container mt-4">-->
+<!--      <div class="row w-50 mx-auto">-->
+<!--        <div class="row">-->
+<!--          <h2>Create facility</h2>-->
+<!--          <form action="@{/customer/edit}" object="${customer}" method="post">-->
+<!--            <div class="form-outline mb-4">-->
+<!--              <input field="*{id}" class="form-control" type="hidden"/>-->
+<!--            </div>-->
+<!--            <div class="row">-->
+
+<!--              <div class="col-6">-->
+<!--                <div class="form-outline mb-4">-->
+<!--                  <label class="form-label">Name Customer</label>-->
+<!--                  <input field="*{nameCustomer}" class="form-control"/>-->
+<!--                </div>-->
+
+<!--                <div class="form-outline mb-4">-->
+<!--                  <label class="form-label">Date Of Birth</label>-->
+<!--                  <input type="date" field="*{dateOfBirth}" class="form-control"/>-->
+<!--                </div>-->
+
+<!--                <div class="form-outline mb-4">-->
+<!--                  <label class="form-label">Gender</label>-->
+
+<!--                  <select class="form-select" aria-label="Default select example"-->
+<!--                          field="*{gender}">-->
+<!--                    <option value="1">-->
+<!--                      nam-->
+<!--                    </option>-->
+<!--                    <option value="0">-->
+<!--                      nữ-->
+<!--                    </option>-->
+<!--                  </select>-->
+
+<!--                </div>-->
+
+<!--                <div class="form-outline mb-4">-->
+<!--                  <label class="form-label">id Card</label>-->
+<!--                  <input field="*{idCard}" class="form-control"/>-->
+
+
+<!--                </div>-->
+
+
+<!--              </div>-->
+
+<!--              &lt;!&ndash;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&ndash;&gt;-->
+
+<!--              <div class="col-6">-->
+<!--                <div class="form-outline mb-4">-->
+<!--                  <label class="form-label">Phone Number</label>-->
+<!--                  <input field="*{phoneNumber}" class="form-control"/>-->
+<!--                </div>-->
+
+<!--                <div class="form-outline mb-4">-->
+<!--                  <label class="form-label">Email</label>-->
+<!--                  <input field="*{email}" class="form-control"/>-->
+<!--                </div>-->
+
+<!--                <div class="form-outline mb-4">-->
+<!--                  <label class="form-label">Address</label>-->
+<!--                  <input field="*{address}" class="form-control"/>-->
+<!--                </div>-->
+
+<!--                <div class="form-outline mb-4">-->
+<!--                  <label class="form-label">Name Customer Type</label>-->
+<!--                  <select field="*{customerType}" class="form-select"-->
+<!--                          aria-label="Default select example">-->
+<!--                    <option each="customerType:${customerTypeList}"-->
+<!--                            text="${customerType.nameCustomerType}"-->
+<!--                            value="${customerType.id}">-->
+
+<!--                    </option>-->
+<!--                  </select>-->
+<!--                </div>-->
+
+<!--              </div>-->
+<!--            </div>-->
+
+<!--            <button type="submit" class="btn btn-primary btn-block bg-momo">-->
+<!--              save-->
+<!--            </button>-->
+
+<!--            <a [routerLink]="['/facility-list']">-->
+<!--              <button type="button" class="btn btn-primary btn-block bg-momo">-->
+<!--                Back To List-->
+<!--              </button>-->
+<!--            </a>-->
+
+
+<!--          </form>-->
+
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
