--- a/module5/ss7_service_router/angular-timelines-app/src/app/app.component.html
+++ b/module5/ss7_service_router/angular-timelines-app/src/app/app.component.html
@@ -3,5 +3,9 @@
 <!--<router-outlet></router-outlet>-->
 <!--<a routerLink="/youtube">Youtube</a>-->
 
-<a routerLink="/product/list">Danh sách sản phẩm</a>|<a routerLink="/product/create">Tạo mới sản phẩm</a>
+<a routerLink="/product/list">Danh sách sản phẩm</a>  <a routerLink="/product/create">Tạo mới sản phẩm</a>||||
+
+
 <router-outlet></router-outlet>
+
+<!--<a routerLink="/tuDien-list"> danh sách từ điển</a>| <a routerLink="/chiTiet"></a>-->
