--- a/module5/ss7_service_router/angular-timelines-app/src/app/product/product-list/product-list.component.html
+++ b/module5/ss7_service_router/angular-timelines-app/src/app/product/product-list/product-list.component.html
@@ -5,11 +5,16 @@
     <td>Tên</td>
     <td>Giá</td>
     <td>Mô tả</td>
+    <td> sửa</td>
+    <td>xóa</td>
   </tr>
   <tr *ngFor="let product of products; index as i">
     <td>{{i + 1}}</td>
     <td>{{product.name}}</td>
     <td>{{product.price}}</td>
     <td>{{product.description}}</td>
+    <td><a [routerLink]="['/product/edit',product.id]">sửa</a></td>
+    <td><a [routerLink]="['/product/delete',product.id]">xóa</a></td>
+
   </tr>
 </table>
